# ssc_3d_planning

./: README.md
ssc_mapping/: CMakeLists.txt  package.xml
ssc_mapping/cfg/: evaluation_visualization_color_pc.rviz
ssc_mapping/include/ssc_mapping/core/: ssc_map.h  voxel.h
ssc_mapping/include/ssc_mapping/eval/: map_eval.h
ssc_mapping/include/ssc_mapping/fusion/: base_fusion.h  counting_fusion.h  log_odds_fusion.h  naive_fusion.h  occupancy_fusion.h  sc_fusion.h
ssc_mapping/include/ssc_mapping/ros/: ssc_server.h
ssc_mapping/include/ssc_mapping/utils/: evaluation_utils.h  voxel_utils.h
ssc_mapping/include/ssc_mapping/visualization/: visualization.h
ssc_mapping/src/: color_map.h  ssc.cpp  ssc_map.h  ssc_map_eval_node.cpp  ssc_server_node.cpp  visualization.h  voxel.h  voxel_utils.h
ssc_mapping/src/eval/: eval_data_node.py  eval_plots.py  fill_ground_truth_map.cpp  fill_ground_truth_map_node.cpp  ssc_map_eval_node.cpp  ssc_map_eval_quality_node.cpp
ssc_mapping/src/fusion/: counting_fusion.cpp  log_odds_fusion.cpp  occupancy_fusion.cpp  sc_fusion.cpp
ssc_mapping/src/ros/: ssc_server.cpp
ssc_mapping/src/visualization/: visualization.cpp
ssc_msgs/: CMakeLists.txt  package.xml
ssc_msgs/msg/: SSCGrid.msg
ssc_planning/: CMakeLists.txt  package.xml
ssc_planning/cfg/: airsim.yaml
ssc_planning/cfg/experiments/: CustomFlat.yaml
ssc_planning/cfg/planners/: exploration_planner.yaml  exploration_planner_ssc_gain_conservative.yaml  exploration_planner_ssc_gain_criteria.yaml
ssc_planning/cfg/visualization/: visualization.rviz
ssc_planning/include/ssc_planning/map/: ssc_occ_map.h  ssc_voxblox.h  ssc_voxblox_criteria_map.h  ssc_voxblox_map.h
ssc_planning/include/ssc_planning/trajectory_evaluator/: ssc_voxel_evaluator.h
ssc_planning/launch/: launch_fusion_evaluation.launch  launch_ssc_pipeline.launch  ssc_node.launch
ssc_planning/scripts/: create_merged_maps.py  eval_data_node.py  eval_plots.py  run_experiments.bash
ssc_planning/src/map/: ssc_occ_map.cpp  ssc_voxblox_criteria_map.cpp  ssc_voxblox_map.cpp
ssc_planning/src/planner/: exploration_planner_node.cpp
ssc_planning/src/trajectory_evaluator/: ssc_voxel_evaluator.cpp
